logs/offboard_pkg/build.make.678.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘Eigen::Vector3d TaskManager::lla2enu(const Vector3d&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:207:31: error: expected ‘;’ before ‘GeographicLib’
  207 |     GeoPos.altitude = lla0.z()
      |                               ^
      |                               ;
  208 | 
  209 |     GeographicLib::Geocentric map(GeographicLib::Constants::WGS84_a(),
      |     ~~~~~~~~~~~~~              
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:211:8: error: missing template arguments before ‘.’ token
  211 |     map.Forward(lla0.x(), lla0.y(), lla0.z(), ecef0.x(), ecef0.y(), ecef0.z());
      |        ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:212:8: error: missing template arguments before ‘.’ token
  212 |     map.Forward(lla1.x(), lla1.y(), lla1.z(), ecef1.x(), ecef1.y(), ecef1.z());
      |        ^
make[2]: *** [CMakeFiles/offboard_pkg_node3.dir/build.make:76: CMakeFiles/offboard_pkg_node3.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:204: CMakeFiles/offboard_pkg_node3.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘Eigen::Vector3d TaskManager::lla2enu(const Vector3d&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:207:31: error: expected ‘;’ before ‘GeographicLib’
  207 |     GeoPos.altitude = lla0.z()
      |                               ^
      |                               ;
  208 | 
  209 |     GeographicLib::Geocentric map(GeographicLib::Constants::WGS84_a(),
      |     ~~~~~~~~~~~~~              
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:211:8: error: missing template arguments before ‘.’ token
  211 |     map.Forward(lla0.x(), lla0.y(), lla0.z(), ecef0.x(), ecef0.y(), ecef0.z());
      |        ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:212:8: error: missing template arguments before ‘.’ token
  212 |     map.Forward(lla1.x(), lla1.y(), lla1.z(), ecef1.x(), ecef1.y(), ecef1.z());
      |        ^
make[2]: *** [CMakeFiles/offboard_pkg_node2.dir/build.make:76: CMakeFiles/offboard_pkg_node2.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:231: CMakeFiles/offboard_pkg_node2.dir/all] Error 2
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp: In member function ‘Eigen::Vector3d TaskManager::lla2enu(const Vector3d&)’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:207:31: error: expected ‘;’ before ‘GeographicLib’
  207 |     GeoPos.altitude = lla0.z()
      |                               ^
      |                               ;
  208 | 
  209 |     GeographicLib::Geocentric map(GeographicLib::Constants::WGS84_a(),
      |     ~~~~~~~~~~~~~              
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:211:8: error: missing template arguments before ‘.’ token
  211 |     map.Forward(lla0.x(), lla0.y(), lla0.z(), ecef0.x(), ecef0.y(), ecef0.z());
      |        ^
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.cpp:212:8: error: missing template arguments before ‘.’ token
  212 |     map.Forward(lla1.x(), lla1.y(), lla1.z(), ecef1.x(), ecef1.y(), ecef1.z());
      |        ^
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:76: CMakeFiles/offboard_pkg_node.dir/src/TaskManager.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:393: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
